--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Awesome Extension</title>
+    <title>Highlighter</title>
     <script src="popup.js"></script>
   </head>
   <body>
-    <h1>Awesome Extension</h1>
-    <button id="checkPage">Check this page now!</button>
+    <input id="search-words" type="text">
   </body>
 </html>
