--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Highlighter</title>
-    <script src="popup.js"></script>
+    <script src="highlighter.js"></script>
   </head>
   <body>
-    <input id="search-words" type="text">
+    <input id="words-input" type="text" >
   </body>
 </html>
